--- a/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -1,3 +1,5 @@
+@import '../../../app/styles/mixins';
+
 .Sidebar {
     flex-shrink: 0;
     width: var(--sidebar-width);
@@ -11,6 +13,10 @@
 .logo {
     flex-shrink: 0;
     height: 73px;
+
+    @include lessThan(xxl) {
+        display: none;
+    }
 }
 
 .row {
@@ -18,8 +24,42 @@
     gap: 10px;
 }
 
+.mobile{
+    @include moreThan(xxl) {
+        display: none;   
+    }
+}
+
+.mobile.notification {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    width: 70px;
+    height: 70px;
+    background: var(--white);
+}
+
+.desktop{
+    @include lessThan(xxl) {
+        display: none;   
+    }
+}
+
 .profile{
     margin-top: 10px;
+
+    @include lessThan(xxl) {   
+        margin-top: 0;
+        margin-bottom: 10px;
+    }
+    
+}
+
+.infoClass {
+    @include lessThan(xxl) {
+        display: none;   
+    }
 }
 
 menu {
@@ -27,6 +67,10 @@ menu {
     flex-direction: column;
     margin-top: 60px;
     gap: 35px;
+
+    @include lessThan(xxl) {
+        gap: 10px;
+    }
 }
 
 .menuItem {
@@ -51,6 +95,27 @@ menu {
 
         svg {
             stroke: var(--accent);
+        }
+    }
+
+    @include lessThan(xxl) {
+        justify-content: center;
+        border-radius: 20px;
+        width: 70px;
+        height: 70px;
+        background: var(--white);
+
+        .menuItemText {
+            display: none;
+        }
+
+        &.active {
+            color: var(--white);
+            background: var(--accent);
+
+            svg {
+                stroke: var(--white);
+            }
         }
     }
 }
