--- a/src/pages/ProfilePage/tabs/ProfileTab/ProfileTab.module.scss
+++ b/src/pages/ProfilePage/tabs/ProfileTab/ProfileTab.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../app/styles/mixins';
+
 .ProfileTab{
     
 }
@@ -7,4 +9,29 @@
     grid-template-columns: repeat(4, minmax(0, 1fr));
     margin-top: 34px;
     gap: 20px;
+
+    @media (width <= 1748px) {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+
+    @media (width <= 1378px) {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+}
+
+.controls{
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
+    margin-top: 20px;
+    gap: 7px;
+
+    @include moreThan(xxl) {
+        display: none;
+    }
+
+    @media (width <= 806px) {
+        display: flex;
+        flex-direction: column;
+    }
+    
 }
