--- a/src/widgets/Schedule/ui/Schedule.module.scss
+++ b/src/widgets/Schedule/ui/Schedule.module.scss
@@ -1,6 +1,10 @@
+@import '../../../app/styles/mixins';
+
 .Schedule{
     flex-shrink: 0;
     width: var(--schedule-width);
+
+    
 }
 
 .weekdayWrapper{
