--- a/src/pages/MainPage/ui/MainPage.module.scss
+++ b/src/pages/MainPage/ui/MainPage.module.scss
@@ -1,3 +1,5 @@
+@import '../../../app/styles/mixins';
+
 .MainPage{
     
 }
@@ -5,4 +7,10 @@
 .newsWrapper{
     display: grid;
     gap: 25px;
+}
+
+.mobileClass{
+    // @include lessThan(sm) {
+    //     background: var(--white);
+    // }
 }
