--- a/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -3,6 +3,11 @@
 .Sidebar {
     flex-shrink: 0;
     width: var(--sidebar-width);
+
+    @include lessThan(sm) {
+        display: none !important;
+        width: 0 !important;
+    }
 }
 
 .collapsed {
@@ -26,7 +31,7 @@
 
 .mobile{
     @include moreThan(xxl) {
-        display: none;   
+        display: none !important;   
     }
 }
 
@@ -62,7 +67,7 @@
     }
 }
 
-menu {
+menu.desktopMenuMenu {
     display: flex;
     flex-direction: column;
     margin-top: 60px;
