--- a/src/pages/SingleNewsPage/ui/SingleNewsPage.module.scss
+++ b/src/pages/SingleNewsPage/ui/SingleNewsPage.module.scss
@@ -95,3 +95,15 @@
         background: var(--white);
     }
 }
+
+.mobileHidden {
+    @include lessThan(sm) {
+        display: none;
+    }
+}
+
+.mobileShow {
+    @include moreThan(sm) {
+        display: none;
+    }
+}
