--- a/src/shared/ui/Cards/HomeworkCard/ui/HomeworkCard.module.scss
+++ b/src/shared/ui/Cards/HomeworkCard/ui/HomeworkCard.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../../app/styles/mixins';
+
 .HomeworkCard{
     border: 1px solid var(--black-stroke-translucent);
     border-radius: 20px;
@@ -7,16 +9,13 @@
     max-width: 230px;
     cursor: pointer;
 
-    @media (width <= 700px) {
-        width: 100%;
-        height: 250px;
-        min-width: 100%;
-        max-width: 100%;
+    @include lessThan(sm) {  
+      width: 100%;
+      min-width: unset;
+      max-width: 100%;
+      background: var(--white);
     }
-
-    @media (width <= 375px) {
-        height: 200px;
-    }
+    
 }
 
 .block{
