--- a/src/widgets/HomeworkDones/ui/HomeworkDones.module.scss
+++ b/src/widgets/HomeworkDones/ui/HomeworkDones.module.scss
@@ -1,3 +1,5 @@
+@import '../../../app/styles/mixins';
+
 .HomeworkDones{
     
 }
@@ -25,4 +27,14 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+
+    
+
+    @include lessThan(sm) {
+        margin-top: 15px;
+
+        .empty {
+            margin-top: 15px;
+        }
+    }
 }
