--- a/src/pages/SchedulePage/ui/SchedulePage.module.scss
+++ b/src/pages/SchedulePage/ui/SchedulePage.module.scss
@@ -97,3 +97,12 @@
     height: 60px;
    
 }
+
+.mobileContent{
+    @include lessThan(sm) {
+        position: initial;
+        border: 1px solid var(--black-stroke-translucent);
+        border-radius: 20px;
+        background: var(--white);
+    }
+}
