--- a/src/pages/SingleNewsPage/ui/SingleNewsPage.module.scss
+++ b/src/pages/SingleNewsPage/ui/SingleNewsPage.module.scss
@@ -33,6 +33,12 @@
             
         }
     }
+
+    @include lessThan(sm) {
+        flex-direction: column-reverse;
+        align-items: flex-start;
+        gap: 12px;
+    }
 }
 
 .title {
