--- a/src/pages/ProfilePage/tabs/FavoriteTab/FavoriteTab.module.scss
+++ b/src/pages/ProfilePage/tabs/FavoriteTab/FavoriteTab.module.scss
@@ -20,4 +20,10 @@
         justify-content: space-between;
         grid-gap: 20px;
     }
+
+    @include lessThan(sm) {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
 }
