--- a/src/pages/ProfilePage/tabs/ProfileTab/ProfileTab.module.scss
+++ b/src/pages/ProfilePage/tabs/ProfileTab/ProfileTab.module.scss
@@ -17,6 +17,11 @@
     @media (width <= 1378px) {
         grid-template-columns: repeat(2, minmax(0, 1fr));
     }
+
+    /* stylelint-disable-next-line order/order */
+    @include lessThan(sm) {
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
 }
 
 .controls{
@@ -34,4 +39,16 @@
         flex-direction: column;
     }
     
+}
+
+
+.userControls{
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    gap: 7px;
+
+    @include moreThan(sm) {
+        display: none;
+    }
 }
