--- a/src/widgets/Modals/InfoModal/ui/InfoModal.module.scss
+++ b/src/widgets/Modals/InfoModal/ui/InfoModal.module.scss
@@ -4,6 +4,11 @@
     align-items: center;
     padding: 50px 80px;
     gap: 20px;
+
+    @media (width <= 505px) {
+        padding: 50px 0;
+        padding-bottom: 0 !important;
+    }
 }
 
 .modalDesc{
