--- a/src/widgets/Modals/ProfileModals/ScheduleModal/components/EditableWeekday/EditableWeekday.module.scss
+++ b/src/widgets/Modals/ProfileModals/ScheduleModal/components/EditableWeekday/EditableWeekday.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../../../app/styles/mixins';
+
 .EditableWeekday{
     
 }
@@ -65,6 +67,12 @@
 
     button {
         height: 55px;
+    }
+
+    @include lessThan(sm) {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
     }
 }
 
