--- a/src/widgets/UserProfile/ui/UserProfile.module.scss
+++ b/src/widgets/UserProfile/ui/UserProfile.module.scss
@@ -23,6 +23,12 @@
     display: flex;
     align-items: center;
     gap: 12px;
+
+    @include lessThan(sm){
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+    }
     
 }
 
