--- a/src/pages/SchedulePage/ui/SchedulePage.module.scss
+++ b/src/pages/SchedulePage/ui/SchedulePage.module.scss
@@ -95,6 +95,10 @@
     align-items: center;
     justify-content: center;
     height: 60px;
+
+    @include moreThan(sm) {
+        display: none;
+    }
    
 }
 
