--- a/src/shared/ui/Layout/ui/Layout.module.scss
+++ b/src/shared/ui/Layout/ui/Layout.module.scss
@@ -124,6 +124,7 @@ $header-height: 94px;
     padding: 0 30px;
     width: 100%;
     height: $header-height;
+    gap: 20px;
 
     .startSlot{
         
