notifications list moved on on mobile

--- a/src/widgets/Notifications/components/NotificationsList.module.scss
+++ b/src/widgets/Notifications/components/NotificationsList.module.scss
@@ -17,8 +17,7 @@
     @include lessThan(sm) {
         position: fixed;
         left: 0;
-        top: unset;
-        bottom: 70px;
+        top: 70px;
         border-bottom-right-radius: 0;
         border-bottom-left-radius: 0;
         width: 100%;
