--- a/src/widgets/Modals/GuideModal/ui/GuideModal.module.scss
+++ b/src/widgets/Modals/GuideModal/ui/GuideModal.module.scss
@@ -53,6 +53,13 @@
             object-fit: cover;
             transform: translate(-50%, -50%);
         }
+
+        &:first-child {
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
     }
 
     .titleWrapper {
